<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/teleopGearPlaced_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teleopGearPlacedHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teleopGearPlaced_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/gearPlacement_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gearPlacementHeading"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gearPlacement_RadiobtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/activeGearPlacement_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activeGearPlacement"/>
                <RadioButton
                    android:id="@+id/passiveGearPlacement_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/passiveGearGearPlacement"/>
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/teleopGearDropped_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teleopGearDropHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teleopGearDropped_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/teleopHighFuelScored_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teleopHighFuelScoredHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teleopHighFuelScored_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/teleopHighFuelMissed_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teleopHighFuelMissedHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teleopHighFuelMissed_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/teleopLowFuel_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teleopLowFuelHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/teleopLowFuel_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/fuelRetrieval_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuelRetrievalHeading"/>
            <RadioGroup
                android:id="@+id/fuelRetrieval_RadiobtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/floorFuelRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floorFuelRetrieval"/>
                <RadioButton
                    android:id="@+id/hopperFuelRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hopperFuelRetrieval"/>
                <RadioButton
                    android:id="@+id/chuteFuelRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chuteFuelRetrieval"/>
                <RadioButton
                    android:id="@+id/noFuelRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/noFuelRetrieval"/>
            </RadioGroup>
            <TextView
                android:id="@+id/gearRetrieval_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gearRetrievalHeading"/>
            <RadioGroup
                android:id="@+id/gearRetrieval_RadiobtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/floorGearRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floorGearRetrieval"/>
                <RadioButton
                    android:id="@+id/hopperGearRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hopperGearRetrieval"/>
                <RadioButton
                    android:id="@+id/noGearRetrieval_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/noGearRetrieval"/>
            </RadioGroup>
            <TextView
                android:id="@+id/climbing_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climbingHeading"/>
            <RadioGroup
                android:id="@+id/climbing_RadiobtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/successClimb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/successClimb"/>
                <RadioButton
                    android:id="@+id/failClimb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failClimb"/>
                <RadioButton
                    android:id="@+id/noClimb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/noClimb"/>
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/climbTime_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/climbTimeHeading"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/climbTime_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/defense_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defenseHeading"/>
            <RadioGroup
                android:id="@+id/defense_RadiobtnGrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/effectiveDefense_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/effectiveDefense"/>
                <RadioButton
                    android:id="@+id/ineffectiveDefense_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ineffectiveDefense"/>
                <RadioButton
                    android:id="@+id/receivedFoulsDefense_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receivedFoulsDefense"/>
                <RadioButton
                    android:id="@+id/noDefense_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/noDefense"/>
            </RadioGroup>
            <TextView
                android:id="@+id/fouls_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fouls"/>
            <CheckBox
                android:id="@+id/fouls_chkbx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/save_btn"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:onClick="saveData"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>

</ScrollView>






